dealer: fixed algorithm and made it more intelligent